# notification-terraform

./: .checkov.yml  .env  .gitignore  .gitleaks.toml  Makefile  NEWRELIC_VARIABLE_UPDATE.md  OPTIMIZATION_SUMMARY.md  README.md  catalog-info.yaml  leakstest.txt  package.json  pull_request_template.md  tsconfig.json  utils.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  release_pr_template.md
assets/: notify-proposed.drawio
aws/: .checkov.yml
docs/: alpha-domain-deprecation-plan.md  creatingSecrets.md  dnsDkimAlerts.md  firedrillMonitoring.md  githubActionsWafException.md  newRelicSetup.md  nodeCordonAndDrain.md  nodeUpgrade.md  productionDnsChanges.md  vpn.md  workflow-optimization.md
env/: .terraform.lock.hcl  README.md  backend.tf  common_variables.tf  dev_config.tfvars  example.yaml  production_config.tfvars  provider.tf  scratch-jlr_config.tfvars  staging_config.tfvars  staging_config.vars  terragrunt.hcl  variables.tf
hooks/: commit-msg  pre-commit
scripts/: add-caching.sh  assumeDnsRole.sh  aws-auth.yaml  awsNuke.cfg  callManifestsRollout.sh  checkEnvFile.sh  cleanTerragruntCache.sh  cleanupEKSNetwork.sh  cleanupELB.sh  cleanupSecurityGroups.sh  clonerepo.sh  cordonAndDrain.sh  cordonAndDrain_node.sh  cordonAndDrain_nodeGroup.sh  create_pinpoint_pools.sh  deleteEnv.sh  deleteEnvironment.sh  deleteS3.py  deletequeries.sh  eksDestroyCleanup.sh  final-optimization.sh  find_unregistered_ec2s.sh  getPCAARN.sh  getVPNConfig.sh  get_dns_records_for_ses_identity.sh  (+18 more)
scripts/s3bucketsize/: README.md  pyproject.toml  s3bucketsize.py
(+766 files in other folders)
