[project]
name = "s3bucketsize"
version = "0.1.0"
description = "Calculate given S3 buckets size and items number."
authors = [
    {name = "jimmy.royer@cds-snc.ca"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv (>=1.0.1,<2.0.0)",
    "boto3 (>=1.36.7,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "~3.12.7"

[tool.poetry.scripts]
s3bucketsize = "s3bucketsize:main"
